# kan_moe

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  RUN_MANUAL.md  analyze_mechanism.py  evaluate_harness.py  evaluate_ppl.py  prepare_fineweb.py  pyproject.toml  requirements.txt  train.py
configs/: dense_150m.yaml  dense_1_5b.yaml  dense_500m.yaml  distributional_moe_150m.yaml  distributional_moe_1_5b.yaml  distributional_moe_500m.yaml  distributional_moe_learned_rho_500m.yaml  output_gated_moe_500m.yaml  residual_mlp_moe_500m.yaml  smoke_test.yaml  vanilla_moe_150m.yaml  vanilla_moe_1_5b.yaml  vanilla_moe_500m.yaml
dmoe/: __init__.py  checkpoint.py  config.py  data.py  distributed.py  gpu_select.py  lm_eval_adapter.py  model.py  moe.py  resources.py  simplex.py
kan/: evaluate_ppl.py  requirements.txt
kan/configs/: distributional_moe_500m.yaml  vanilla_moe_500m.yaml
kan/dmoe/: config.py  data.py  model.py
scripts/: count_parameters.py  experiment_matrix.py  summarize_seeds.py
tests/: test_data.py  test_gpu_select.py  test_model.py  test_prepare_fineweb.py  test_resources.py  test_revised_protocol.py  test_simplex.py
